--- a/Take02/appsettings.json
+++ b/Take02/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "CocktailsDatabase": ""
+    "CocktailsDatabase": "Data Source=dbprojects.cqxieikmyvba.us-west-2.rds.amazonaws.com,1433;Initial Catalog=cocktails;Persist Security Info=True;User ID=projectsmaster;Password=QirE3KlTSstE5GuBk5db"
   },
   "Logging": {
     "IncludeScopes": false,
