#8 Travis variables as Release secrets

--- a/Take02/appsettings.Development.json
+++ b/Take02/appsettings.Development.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "CocktailsConnection": "Data Source=(LocalDB)/MSSQLLocalDB;Initial Catalog=cocktails;Persist Security Info=True"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
