--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ sudo: required
 mono: none
 dotnet: 2.1.2
 script:
+  - echo "$COCKTAILS_CONNECTION_STRING"
   - sed -i.backup -e 's/__COCKTAILS_CONNECTION_STRING__/'"$COCKTAILS_CONNECTION_STRING"'/g' Take02/appsettings.Release.json
-  - cat Take02/appsettings.json
+  - cat Take02/appsettings.Release.json
   - dotnet restore
   - dotnet build --configuration "Release"
   - dotnet test Take02.Tests
