--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
   - sed -i.backup -e 's/__COCKTAILS_CONNECTION_STRING__/'"$COCKTAILS_CONNECTION_STRING"'/g' Take02/appsettings.Release.json
   - cat Take02/appsettings.Release.json
   - dotnet restore
-  - dotnet build --configuration "Release"
+  - dotnet build --configuration "Release" --no-restore
   - dotnet test Take02.Tests
 after_success:
   - docker --version
