--- a/Take02/appsettings.Development.json
+++ b/Take02/appsettings.Development.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "CocktailsConnection": "Data Source=(LocalDB)/MSSQLLocalDB;Initial Catalog=cocktails;Persist Security Info=True"
+    "CocktailsConnection": "__COCKTAILS_CONNECTION_STRING__"
   },
   "Logging": {
     "IncludeScopes": false,
