--- a/Take02/appsettings.json
+++ b/Take02/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "CocktailsConnection": "Data Source=servername;User ID=username;Password=db_password"
+    "CocktailsConnection": "__COCKTAILS_CONNECTION_STRING__"
   },
   "Logging": {
     "IncludeScopes": false,
